static/styles.css
@media screen and (max-width: 991px) {
    #nav-search {
        margin-bottom: 10px;
        width: 100%;
    }
}

body {
    background-color: #FDF2E4;
}

.text-OldLace {
    color: #FDF2E4;
}

.text-HunterGreen {
    color: #486D4E;
}

.text-White {
    color: #FFFFFF;
}

.text-Cambridge {
    color: #77A780;
}

.text-Jasmine {
    color: #EFD577;
}

.text-Black {
    color: #231F20;
}

.text-Lightgray {
    color: lightgray;
}
.text-Secondarygreen {
    color: #304434;
}

.primaryColor {
    background-color: rgb(44, 100, 54);
}

.secondaryColor {
    background-color: #77A780;
}

.tertiaryColor {
    background-color: #EFD577;
}

.border-White {
    border: 1px solid #FFFFFF;
}

.border-Secondarygreen {
    border: 1px solid #304434;
}

.border-Cambridge {
    border: 1px solid #77A780;
}

#products-heading, #offer-heading, #mission-heading {
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease, visibility 0.3s ease;
}


#popular-products:hover #products-heading {
    opacity: 1;
    visibility: visible;
}

#popular-products:hover #popular-img {
    opacity: 0.5;
    background-color: #EFD577;
}

#offer:hover #offer-heading {
    opacity: 1;
    visibility: visible;
}

#offer:hover #offer-img {
    opacity: 0.5;
}

#popular-products {
    border-right: 3px solid #486D4E;
    border-bottom: 3px solid #486D4E;
}

#offer {
    border-left: 3px solid #486D4E;
    border-bottom: 3px solid #486D4E;
}

#mission-img {
    border-top: 3px solid #486D4E;
}

#start-btn:hover {
    background-color: #FDF2E4;
    border-color: #77A780;
}

#action-btn:hover {
    background-color: #486D4E;
    border-color: #96d4a2;
}

#popular-products {
    padding: 0%;
}

#offer {
    padding: 0%;
}

#mission {
    width: 100%;
    padding: 0%;
}

.product-card {
    width: 240px;
}

.product-card:hover {
    background-color: #77A780;
    border-color: #5C8463;
}

.product-search {
    background-color: #77A780;
    color: #ffffff;
}

.product-card:hover {
    background-color: #77A780;
    border-color: #5C8463;
}

.product-search:hover {
  background-color: #5C8463;
  border-color: #77A780;
  color: #f0f0f0;
}

.compare-card:hover{
    background-color: #77A780;
    border-color: #486D4E;
    color: white;
}

.back-products {
    background-color: #77A780;
    border-color: #5C8463;
}

.back-products:hover {
    background-color: #486D4E;
    border-color: #77A780;
    color: white;
}

.saved-card:hover {
    background-color: #77A780;
    border-color: #5C8463;
}

#saved-search {
    width: 100%;
}

#saved-rule {
    border: none;
    border-top: 2px solid #486D4E;
    color: #486D4E;
    background-color: #486D4E;
    height: 2px;
    margin: 20px 20px;
}

.card-header {
    background-color: #96d4a2;
}

#delete-btn:hover, #delete-cover:hover {
    border-color: #cb444b;
    background-color: #ffffff;
    color: #cb444b;
}

.account-btn {
    background-color: #5C8463;
    border: none;
}

.account-btn:hover {
    background-color: #77A780;
    border-color: #5C8463;
    color: black;
}

.text-box:focus {
    border-color: #96d4a2;
    box-shadow: 0 0 0 .25rem rgba(168, 237, 181,.25);
}

.save-btn .save-label {
    display: none;
}

.save-btn .save-heart {
    display: inline;
}

.save-btn:hover {
    background-color: #ffffff;
    transition: width 5s;
}

.save-btn:hover .save-label {
   display: inline;
   color: #cb444b;
   float: inline-start
}

.save-btn:hover .save-heart {
    display: inline;
    float: inline-end;
    color: #cb444b;
}

.user-btn {
    background-color: #77A780;
    border-color: #486D4E;
}

.user-btn:hover {
    background-color: #486D4E;
    border-color: #77A780;
}

.nav-search {
    width: 40%;
}

#home-img {
    border: 3px solid #486D4E;
}

#guide-block {
    height: 400px;
    
}

#fix {
    display: none;
}

.guide-link:hover {
    color: #486D4E;
}

.guide-table:hover {
    --bs-list-group-action-hover-bg: #96d4a2;
    /* color: black; */
    border: none;
}

.guide-table:active {
    background-color: #96d4a2;
    color: black;
    border: none;
}

#save-clear {
    display: flex;
}

#save-clear .clear-label {
    display: none;
    white-space: nowrap;
}

#save-clear .clear-icon {
    display: inline;
}

#save-clear:hover {
    background-color: #ffffff;
    transition: width 5s;
}

#save-clear:hover .clear-label {
   display: inline;
   color: #cb444b;
   float: inline-start;
}

#save-clear:hover .clear-icon {
    display: inline;
    float: inline-end;
    color: #cb444b;
}

.active-link {
    color: #face2e; 
}

.footer-link:hover {
    color: #EFD577;
}

.background-image {
    z-index: -1;
}

.foreground-text {
    z-index: 1;
    white-space: pre-line;
}

.list-group-item.active {
    --bs-list-group-active-bg: #9bd4a2;
    --bs-list-group-active-border-color: #9bd4a2;
}

div #guide-block {
    overflow: auto;
    scrollbar-color: red;
    scrollbar-width: thin;
}

.social-icon:hover {
    color: #EFD577;
}

.product-rule {
    border-color:#486D4E;
    border-width: 5px;
    opacity: 1.0;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    -webkit-box-shadow: 0 0 0 30px #9bd4a255 inset !important;
}

#newZipCode:focus + #newZipNote {
    visibility: visible;
    display: inline;
}

#newZipNote {
    visibility: hidden;
    display: none;
    border: none;
    background: none;
    margin-bottom: 5px;
}

.search-header-link {
    color: #231F20;
}

.search-header-link:hover {
    color: #486D4E;
}

.search-box {
    max-height: 250px;
}

.search-card:hover {
    background-color: #77A780;
    border-color: #5C8463;
}

.active-account {
   color: #77A780;
}

.page-link {
    margin-left: 3px;
    margin-right: 3px;
    border-radius: 5px;
}

.page-link:hover {
    background-color: #77A780;
    color: lightgray;
    border-radius: 5px;
} 

.product-btn {
    bottom: 10px;
    right: 10px;
}

#leftovers-section {
    height: 500px;
    border: 2px solid #486D4E;
    border-radius: 20px;
    background-color: #77A780;
}

#product-search-results {
    max-height: 200px;

}

.page-search {
    background-color: #77A780;
    color: lightgray;
    border-color: lightgray;
    border-radius: 5px;
}

.page-search:hover {
    color: white;
    border-color: white;
    background-color: #88be92;
    border-radius: 5px;
}

.page-search:active {
    color: white;
    border-color: white;
    background-color: #77A780;
    border-radius: 5px;
}

.dropdown-item {
    --bs-dropdown-link-active-bg: #77A780;
}

.dropdown-toggle {
    --bs-btn-active-bg: #486D4E;
    --bs-btn-active-border-color:  #77A780;
}

.saved-btn:hover {
    background-color: #f0f0f0;
   
}

.guide-note {
    font-size: 1px;
}

.product-row {
    -webkit-scrollbar-thumb-background: red; 
}

